# DDNS_Project

./: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yaml  flake.nix  justfile  mp_build.yaml  release_server.sh  shell.nix
ddns-client/: .dockerignore  .gitignore  Cargo.toml  README.md
ddns-client/src/: main.rs
ddns-macros/: Cargo.toml
ddns-macros/src/: lib.rs
ddns-server/: .dockerignore  Cargo.toml
ddns-server/docker/nc/debug/: Dockerfile
ddns-server/src/: main.rs
ddns_client/: .dockerignore  .env.example  Cargo.toml  Dockerfile  justfile
ddns_client/src/: main.rs
ddns_macros/: Cargo.toml
ddns_server/: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  justfile  release.sh
ddns_server/.zed/: settings.json
ddns_server/docker/default/debug/: Dockerfile
ddns_server/docker/default/release/: Dockerfile
ddns_server/docker/nc/release/: Dockerfile
ddns_server/src/: consts.rs  macros.rs  main.rs
docker/client/: Dockerfile
docker/server/: Dockerfile
docker/server/netcup/: Dockerfile
post_ip/: Cargo.toml  README.md
post_ip/src/: main.rs
