[workspace]
resolver = "3"
members = ["ddns_client", "ddns_server"]

[workspace.package]
version = "1.0.5"
edition = "2024"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[workspace.dependencies]
anyhow = "1.0.99"
axum = "0.8.4"
dotenvy = "0.15.7"
reqwest = "0.12.23"
serde = "1.0.219"
serde_json = "1.0.143"
tokio = "1.47.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
