[workspace]
resolver = "3"
members = ["ddns_client", "ddns_macros", "ddns_server"]

[workspace.package]
version = "1.0.5"
edition = "2024"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[workspace.dependencies]
axum = "0.8.4"
color-eyre = "0.6.5"
dotenvy = "0.15.7"
reqwest = "0.12.23"
serde = "1.0.219"
serde_json = "1.0.143"
tokio = "1.47.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

ddns_macros = { path = "ddns_macros" }
