[package]
name = "ddns_server"
version = "0.1.1"
edition = "2024"

[features]
default = []
post_netcup = ["serde_json", "reqwest"]

[dependencies]
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
dotenvy = "0.15.7"
anyhow = "1.0.98"
axum = "0.8.4"
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread", "fs"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", optional = true }
reqwest = { version = "0.12.15", features = ["json"], optional = true }

[profile.release]
lto = true
codegen-units = 1
