[package]
name = "ddns_server"
version = "0.1.1"
edition = "2024"

[profile.release]
lto = true
codegen-units = 1

[features]
default = []
post_netcup = ["serde_json", "reqwest"]

[dependencies]
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
dotenvy = "0.15.7"
anyhow = "1.0.99"
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "fs"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.143", optional = true }
reqwest = { version = "0.12.23", features = ["json"], optional = true }
