[package]
name = "ddns_server"
version.workspace = true
edition.workspace = true

[features]
default = []
post_netcup = ["serde_json", "reqwest"]

[dependencies]
axum = { workspace = true }
color-eyre = { workspace = true }
dotenvy = { workspace = true }
reqwest = { workspace = true, features = ["json"], optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs", "signal"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

ddns_macros = { workspace = true }
